ike:knowledge-export resolves through the knowledge SPI in a forked seam
The goal is now a thin face over ike-knowledge-spi: it builds a typed
ExportRequest and runs KnowledgeExporter via the new
KnowledgeServiceRunner — a child JVM over the PROJECT's runtime
classpath (the store lifecycle is JVM-global; the fork survives anything
the implementation does), streaming [seam] output live, failing on any
non-zero exit, inheriting --enable-preview from the Maven JVM. The
lockstep CHANGESET_MAIN constant and positional-arg convention are
retired; implementation selection is a use-site dependency
(ike-knowledge-provider), with an <implementation> parameter for
named selection and in-process mode retained for debugging. New
<view> parameter carries the IKE-KNOWLEDGE-VIEW dotted dimension keys
into the request. Proven end-to-end by rich-surface-changeset: 149
entities, identical to the retired seam-main path.

Refs: IKE-Network/ike-issues#850, IKE-Network/ike-issues#856